--- a/manifest.json
+++ b/manifest.json
@@ -3,20 +3,20 @@
   "description": "Permet d'utiliser le panel d'émojis de facebook.com au clavier.",
   "version": "1.0",
   "icons": {
-    "700": "emocuts_icon.png"
+    "128": "images/emocuts_icon.png"
   },
   "browser_action": {
-    "default_icon": "emocuts_icon.png",
-    "default_popup": "options.html"
+    "default_icon": "images/emocuts_icon.png",
+    "default_popup": "options/options.html"
   },
   "permissions": [
     "tabs",
     "<all_urls>",
     "storage"
   ],
-  "web_accessible_resources": ["emocuts_icon.png"],
+  "web_accessible_resources": ["images/emocuts_icon.png"],
   "options_ui": {
-    "page": "options.html",
+    "page": "options/options.html",
     "chrome_style": true
   },
   "content_scripts": [
@@ -24,7 +24,7 @@
       "matches": [
         "https://www.facebook.com/*"
       ],
-      "js": ["jquery-3.2.0.min.js", "shortcut_handler.js", "languages_handler.js","content.js"],
+      "js": ["options/jquery-3.2.0.min.js","handlers/shortcut_handler.js", "handlers/languages_handler.js","content.js"],
       "run_at": "document_end"
     }
   ],
